--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,12 @@ services:
       CQL_TRANSLATE_ENABLED: ${CODEX_FEASIBILITY_BACKEND_CQL_TRANSLATE_ENABLED:-true}
       FHIR_TRANSLATE_ENABLED: ${CODEX_FEASIBILITY_BACKEND_FHIR_TRANSLATE_ENABLED:-false}
       FLARE_WEBSERVICE_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_FLARE_WEBSERVICE_BASE_URL:-http://flare:5000}
+      CQL_SERVER_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_CQL_SERVER_BASE_URL:-http://cql}
       API_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_API_BASE_URL:-}
       QUERY_VALIDATION_ENABLED: ${CODEX_FEASIBILITY_BACKEND_QUERY_VALIDATION_ENABLED:-true}
+      # ---- Direct
+      BROKER_CLIENT_DIRECT_USE_CQL: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DIRECT_USE_CQL:-false}
+      BROKER_CLIENT_OBFUSCATE_RESULT_COUNT: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_OBFUSCATE_RESULT_COUNT:-false}
       # ---- Aktin
       AKTIN_BROKER_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_AKTIN_BROKER_BASE_URL:-http://aktin:8080/broker}
       AKTIN_BROKER_API_KEY: ${CODEX_FEASIBILITY_BACKEND_AKTIN_BROKER_API_KEY:-abc123}
