--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
       <version>1.3.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>ca.uhn.hapi.fhir</groupId>
+      <artifactId>hapi-fhir-client</artifactId>
+      <version>5.1.0</version>
+    </dependency>
+
     <!--
       This is for fixing an RCE vulnerability in commons-text <1.10.0. The dependency comes with the
       dsf-fhir-webservice-client which cannot update the transitive dependency itself due to breaking
