--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
 
-  unit-tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -24,10 +24,10 @@ jobs:
           java-version: 17
 
       - name: Cache Local Maven Repo
-        uses: actions/cache@v2.1.2
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: maven-repo
+          key: tests-maven-${{ hashFiles('pom.xml') }}
 
       - uses: s4u/maven-settings-action@v2.4.0
         with:
@@ -35,34 +35,8 @@ jobs:
             [{"id": "highmed", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"},
              {"id": "mii", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}]
 
-      - name: Run Unit Tests
-        run: mvn -B test
-
-  integration-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 17
-
-      - name: Cache Local Maven Repo
-        uses: actions/cache@v2.1.2
-        with:
-          path: ~/.m2/repository
-          key: maven-repo
-
-      - uses: s4u/maven-settings-action@v2.4.0
-        with:
-          servers: |
-            [{"id": "highmed", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"},
-             {"id": "mii", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}]
-
-      - name: Run Integration Tests
-        run: mvn -B -DskipUnitTests verify
+      - name: Run Tests
+        run: mvn -B verify
 
   security-scan:
     runs-on: ubuntu-latest
@@ -76,10 +50,10 @@ jobs:
         java-version: 17
 
     - name: Cache Local Maven Repo
-      uses: actions/cache@v2.1.2
+      uses: actions/cache@v3
       with:
         path: ~/.m2/repository
-        key: maven-repo
+        key: security-scan-maven-${{ hashFiles('pom.xml') }}
 
     - uses: s4u/maven-settings-action@v2.4.0
       with:
@@ -88,7 +62,7 @@ jobs:
            {"id": "mii", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}]
 
     - name: Maven Package
-      run: mvn -B -DskipUnitTests -DskipIntegrationTests package
+      run: mvn -B -DskipTests package
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
@@ -109,7 +83,7 @@ jobs:
 
   release:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    needs: [ unit-tests, security-scan, integration-tests ]
+    needs: [ tests, security-scan ]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -121,10 +95,10 @@ jobs:
         java-version: 17
 
     - name: Cache Local Maven Repo
-      uses: actions/cache@v2.1.2
+      uses: actions/cache@v3
       with:
         path: ~/.m2/repository
-        key: maven-repo
+        key: release-maven-${{ hashFiles('pom.xml') }}
 
     - uses: s4u/maven-settings-action@v2.4.0
       with:
@@ -139,7 +113,7 @@ jobs:
         echo ::set-output name=version::${GITHUB_REF#refs/tags/v}
 
     - name: Maven Package
-      run: mvn -B -DskipUnitTests -DskipIntegrationTests package
+      run: mvn -B -DskipTests package
 
     - name: Login to GitHub Docker Registry
       uses: docker/login-action@v1
@@ -163,6 +137,3 @@ jobs:
           ghcr.io/${{ steps.prep.outputs.repository }}:latest
           ghcr.io/${{ steps.prep.outputs.repository }}:${{ steps.prep.outputs.version }}
         push: true
-
-
-
