--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.7</version>
+    <version>2.7.8</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
+
   <groupId>de.medizininformatik-initiative</groupId>
   <artifactId>FeasibilityGuiBackend</artifactId>
   <version>2.1.0</version>
+
   <name>FeasibilityGuiBackend</name>
   <description>Backend of the Feasibility GUI</description>
-
 
   <scm>
     <connection>scm:git:${project.scm.url}</connection>
     <developerConnection>scm:git:${project.scm.url}</developerConnection>
     <url>https://github.com/medizininformatik-initiative/feasibility-backend.git</url>
-    <tag>v0.0.8</tag>
   </scm>
 
   <properties>
@@ -26,6 +27,7 @@
     <mockwebserver.version>4.10.0</mockwebserver.version>
     <okhttp3.version>4.10.0</okhttp3.version>
     <spring-security.version>5.8.1</spring-security.version>
+    <spring-security-test.version>5.8.1</spring-security-test.version>
   </properties>
 
   <dependencyManagement>
@@ -36,11 +38,6 @@
         <version>20.0.3</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.bouncycastle</groupId>
-        <artifactId>bcpkix-jdk15on</artifactId>
-        <version>1.70</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -96,7 +93,6 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.12.0</version>
     </dependency>
 
     <dependency>
@@ -107,14 +103,12 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.5.1</version>
       <scope>runtime</scope>
     </dependency>
 
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
 
@@ -139,7 +133,7 @@
     <dependency>
       <groupId>ca.uhn.hapi.fhir</groupId>
       <artifactId>hapi-fhir-client</artifactId>
-      <version>5.1.0</version>
+      <version>5.7.9</version>
     </dependency>
 
     <!--
@@ -152,6 +146,7 @@
       <artifactId>commons-text</artifactId>
       <version>1.10.0</version>
     </dependency>
+
     <dependency>
       <groupId>org.highmed.dsf</groupId>
       <artifactId>dsf-fhir-webservice-client</artifactId>
@@ -179,7 +174,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.1.27</version>
+      <version>0.1.29</version>
     </dependency>
 
     <dependency>
@@ -226,7 +221,6 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
-      <version>5.8.1</version>
       <scope>test</scope>
     </dependency>
 
@@ -259,6 +253,7 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+
     <repository>
       <id>mii</id>
       <name>GitHub Medizininformatik-Initiative Apache Maven Packages</name>
