#53 - Migrate from Keycloak Adapter to Spring Security OAuth & #54 - Migrate to Spring 6
- replace keycloak adapter with spring security
- update spring boot to 3.0.2
- update hapi fhir client to 6.2.5
- replace dsf-fhir-webservice-client and dsf-fhir-rest-adapter with custom versions
- remove unused imports
- switch from database enums to plain text for result_type and broker_type

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,12 +15,15 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        dialect=com:
-          jackis:
-            jsonintegration:
-              hibernate: CustomPostgreSQL95Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   flyway:
     locations: filesystem:${ONTOLOGY_DB_MIGRATION_FOLDER:ontology/migration},classpath:db/migration
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${KEYCLOAK_BASE_URL:http://localhost:8080/auth}/realms/${KEYCLOAK_REALM:feasibility}
+          jwk-set-uri: ${KEYCLOAK_BASE_URL:http://localhost:8080/auth}/realms/${KEYCLOAK_REALM:feasibility}/protocol/openid-connect/certs
 
 springdoc:
   swagger-ui:
@@ -83,15 +86,6 @@ app:
     nqueries:
       amount: ${SECURITY_NQUERIES_AMOUNT:3}
       perminutes: ${SECURITY_NQUERIES_PERMINUTES:1}
-
-keycloak:
-  cors: true
-  cors-exposed-headers: Location
-  bearer-only: true
-  auth-server-url: ${KEYCLOAK_BASE_URL:http://localhost:8080}/auth
-  realm: ${KEYCLOAK_REALM:codex-develop}
-  ssl-required: external
-  resource: ${KEYCLOAK_CLIENT_ID:feasibility-gui}
 
 logging:
   level:
