#58 - Do not persist results in backend
- add caffeine cache
- add config variable for cache ttl in application.yml and docker-compose.yml
- replace ResultRepository with ResultService
- remove SiteRepository
- replace site ids with sitename
- add sql script to drop result and site tables

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,7 @@ app:
   enableQueryValidation: ${QUERY_VALIDATION_ENABLED:true}
   keycloakAllowedRole: ${KEYCLOAK_ALLOWED_ROLE:FEASIBILITY_USER}
   keycloakAdminRole: ${KEYCLOAK_ADMIN_ROLE:FEASIBILITY_ADMIN}
+  queryResultExpiryMinutes: ${QUERYRESULT_EXPIRY_MINUTES}
   broker:
     mock:
       enabled: ${BROKER_CLIENT_MOCK_ENABLED:false}
