#61 - Only summary result returned if less (<) than x sites answered
- add configurable threshold for amount of sites that need to have replied in order for a user to retrieve a query result including different sites (still obfuscated)
- variable app.privacy.threshold.minRespondingSites and env variable PRIVACY_THRESHOLD_SITES
- restructure /query/{id}/result endpoints as follows
- GET ../query/{id} no longer contains the result (this was only used when loading saved queries which needs a revamp anyways)
- GET ../query/{id}/result only contains the summary
- GET ../query/{id}/detailed contains the result, broken down on sites (with obfuscated names), as long as more than the threshold have answered
- GET ../query/{id}/with-sitenames always contains the full result with clear site names, no matter the threshold (is only available to admins)
- remove the result from the Query class in the query.api package

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       DSF_WEBSERVICE_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_DSF_WEBSERVICE_BASE_URL:-https://dsf:8080/fhir}
       DSF_WEBSOCKET_URL: ${CODEX_FEASIBILITY_BACKEND_DSF_WEBSOCKET_URL:-wws://dsf:8080/fhir/ws}
       DSF_ORGANIZATION_ID: ${CODEX_FEASIBILITY_BACKEND_DSF_ORGANIZATION_ID}
+      PRIVACY_THRESHOLD_SITES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_SITES}
     volumes:
       - ${CODEX_FEASIBILITY_BACKEND_LOCAL_CONCEPT_TREE_PATH:-./ontology/codex-code-tree.json}:${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/codex-code-tree.json
       - ${CODEX_FEASIBILITY_BACKEND_LOCAL_TERM_CODE_MAPPING_PATH:-./ontology/codex-term-code-mapping.json}:${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/codex-term-code-mapping.json
