#59 - Limit result polling
- add an interceptor to rest calls that handles rate limiting for polling
- rename query create parameter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,10 @@ services:
       DSF_WEBSERVICE_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_DSF_WEBSERVICE_BASE_URL:-https://dsf:8080/fhir}
       DSF_WEBSOCKET_URL: ${CODEX_FEASIBILITY_BACKEND_DSF_WEBSOCKET_URL:-wws://dsf:8080/fhir/ws}
       DSF_ORGANIZATION_ID: ${CODEX_FEASIBILITY_BACKEND_DSF_ORGANIZATION_ID}
+      # ---- Privacy and Obfuscation
+      PRIVACY_QUOTA_CREATE_AMOUNT: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_CREATE_AMOUNT}
+      PRIVACY_QUOTA_CREATE_INTERVALMINUTES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_CREATE_INTERVALMINUTES}
+      PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS}
       # If the total result for a query is below this number, return an empty result instead.
       PRIVACY_THRESHOLD_RESULTS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_RESULTS}
       PRIVACY_THRESHOLD_SITES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_SITES}
