#59 - Limit result polling
- remove unused import
- reformat javadoc comment
- replace String.valueOf(Long) with Long.toString(long)
- replace @SneakyThrows annotation with throws declaration
- extract PrincipalHelper from RateLimitingInterceptor to be able to deal with mock users
- add Integration Tests for RateLimitingInterceptor

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,6 +7,8 @@ security:
 
 app:
   queryResultExpiryMinutes: 1
+  keycloakAllowedRole: "FEASIBILITY_TEST_USER"
+  keycloakAdminRole: "FEASIBILITY_TEST_ADMIN"
   privacy:
     quota:
       create:
