#59 - Limit result polling (#69)
* #59 - Limit result polling

- add an interceptor to rest calls that handles rate limiting for polling
- rename query create parameter

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,7 +7,13 @@ security:
 
 app:
   queryResultExpiryMinutes: 1
-  security:
-    nqueries:
-      amount: 3
-      perminutes: 1
+  keycloakAllowedRole: "FEASIBILITY_TEST_USER"
+  keycloakAdminRole: "FEASIBILITY_TEST_ADMIN"
+  privacy:
+    quota:
+      create:
+        amount: 3
+        intervalMinutes: 1
+      read:
+        any:
+          pollingIntervalSeconds: 0
