#68 - Limit requesting of detailed results per user
- add a second token bucket for the detailed results endpoint
- put tokens back into the bucket if the detailed result was not returned (for whatever reason)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -91,6 +91,9 @@ app:
       read:
         any:
           pollingIntervalSeconds: ${PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS:10}
+        detailedObfuscated:
+          amount: ${PRIVACY_QUOTA_READ_DETAILEDOBFUSCATED_AMOUNT:3}
+          intervalMinutes: ${PRIVACY_QUOTA_READ_DETAILEDOBFUSCATED_INTERVALMINUTES:120}
 
 logging:
   level:
