--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -93,7 +93,7 @@ app:
           pollingIntervalSeconds: ${PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS:10}
         detailedObfuscated:
           amount: ${PRIVACY_QUOTA_READ_DETAILEDOBFUSCATED_AMOUNT:3}
-          intervalMinutes: ${PRIVACY_QUOTA_READ_DETAILEDOBFUSCATED_INTERVALMINUTES:120}
+          intervalSeconds: ${PRIVACY_QUOTA_READ_DETAILEDOBFUSCATED_INTERVALSECONDS:7200}
 
 logging:
   level:
