--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -16,7 +16,7 @@ app:
         intervalMinutes: 1
       read:
         any:
-          pollingIntervalSeconds: 0
+          pollingIntervalSeconds: 1
         detailedObfuscated:
-          amount: 999
-          intervalMinutes: 0
+          amount: 1
+          intervalSeconds: 3
