--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
     <dependency>
       <groupId>org.aktin</groupId>
       <artifactId>broker-client</artifactId>
-      <version>1.3.2</version>
+      <version>1.5.0</version>
     </dependency>
 
     <dependency>
@@ -245,6 +245,21 @@
       <artifactId>reactor-test</artifactId>
       <version>3.5.2</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.xml.bind.</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.3</version>
     </dependency>
 
   </dependencies>
