fix: explicitly add dependencies for AKTIN broker to support older version of jakarta xml bind api

--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,22 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Explicitly add older jakarta lib to support AKTIN
+    note the "." at the end of the groupId for jakarta.xml.bind
+    Dependency will be removed once AKTIN updated to new jakarta api version 4.0.0
+    to be compatible with current spring version
+    -->
+    <dependency>
+      <groupId>jakarta.xml.bind.</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+
   </dependencies>
 
   <repositories>
