fix: set aktin broker to false for test

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,6 +9,9 @@ app:
   queryResultExpiryMinutes: 1
   keycloakAllowedRole: "FEASIBILITY_TEST_USER"
   keycloakAdminRole: "FEASIBILITY_TEST_ADMIN"
+  broker:
+    aktin:
+      enabled: false
   privacy:
     quota:
       create:
