--- a/pom.xml
+++ b/pom.xml
@@ -247,7 +247,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>jakarta.xml.bind</groupId>
+      <groupId>jakarta.xml.bind.</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
       <version>2.3.3</version>
     </dependency>
