#57 - Swagger UI is broken
- update springdoc-openapi dependency to v2
- allow anonymous access on swagger api
- adapt query result endpoints to latest changes
- disable try it out button

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,8 @@ spring:
 
 springdoc:
   swagger-ui:
-    url: /swagger.yaml
+    url: /v3/api-docs/swagger.yaml
+    tryItOutEnabled: false
 management:
   endpoints:
     enabled-by-default: false
