fix: add threshold to test application.yml and add logging of query translation to Translation Component

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -13,6 +13,9 @@ app:
     aktin:
       enabled: false
   privacy:
+    threshold:
+      sites: 3
+      results: 20
     quota:
       create:
         amount: 3
