--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -21,8 +21,9 @@ app:
         amount: 3
         intervalMinutes: 1
       read:
-        any:
+        resultSummary:
           pollingIntervalSeconds: 1
-        detailedObfuscated:
+        resultDetailedObfuscated:
+          pollingIntervalSeconds: 1
           amount: 1
           intervalSeconds: 3
