#98 - Hard Query Create Limit and Power User
- add db migration script to insert blacklist table
- add jpa repo for blacklist
- add the actual check for blacklisted user and exceeding the hard limit
- rename app.privacy.quota.create.* to app.privacy.quota.soft.create.*
- add app.privacy.quota.hard parameters
- add power user role

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       KEYCLOAK_REALM: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_REALM:-codex-develop}
       KEYCLOAK_CLIENT_ID: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_CLIENT_ID:-feasibility-gui}
       KEYCLOAK_ALLOWED_ROLE: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_ALLOWED_ROLE:-CODEX_USER}
+      KEYCLOAK_POWER_ROLE: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_POWER_ROLE:-CODEX_POWER_USER}
       ONTOLOGY_FILES_FOLDER_UI: ${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}
       ONTOLOGY_DB_MIGRATION_FOLDER: ${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_DB_MIGRATION_FOLDER:-/opt/codex-feasibility-backend/ontology/migration}
       MAPPINGS_FILE: ${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/codex-term-code-mapping.json
@@ -49,8 +50,10 @@ services:
       DSF_WEBSOCKET_URL: ${CODEX_FEASIBILITY_BACKEND_DSF_WEBSOCKET_URL:-wws://dsf:8080/fhir/ws}
       DSF_ORGANIZATION_ID: ${CODEX_FEASIBILITY_BACKEND_DSF_ORGANIZATION_ID}
       # ---- Privacy and Obfuscation
-      PRIVACY_QUOTA_CREATE_AMOUNT: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_CREATE_AMOUNT}
-      PRIVACY_QUOTA_CREATE_INTERVALMINUTES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_CREATE_INTERVALMINUTES}
+      PRIVACY_QUOTA_SOFT_CREATE_AMOUNT: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_SOFT_CREATE_AMOUNT}
+      PRIVACY_QUOTA_SOFT_CREATE_INTERVALMINUTES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_SOFT_CREATE_INTERVALMINUTES}
+      PRIVACY_QUOTA_HARD_CREATE_AMOUNT: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_HARD_CREATE_AMOUNT}
+      PRIVACY_QUOTA_HARD_CREATE_INTERVALMINUTES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_HARD_CREATE_INTERVALMINUTES}
       PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS}
       # If the total result for a query is below this number, return an empty result instead.
       PRIVACY_THRESHOLD_RESULTS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_RESULTS}
