--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
       BROKER_CLIENT_DSF_ENABLED: ${CODEX_FEASIBILITY_BACKEND_BROKER_CLIENT_DSF_ENABLED:-false}
       KEYCLOAK_ENABLED: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_ENABLED:-true}
       KEYCLOAK_BASE_URL: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_BASE_URL:-http://keycloak:8080}
-      KEYCLOAK_REALM: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_REALM:-codex-develop}
+      KEYCLOAK_REALM: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_REALM:-feasibility}
+      KEYCLOAK_BASE_URL_ISSUER: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_BASE_URL_ISSUER:-http://localhost:8080/auth}
+      KEYCLOAK_BASE_URL_JWK: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_BASE_URL_JWK:-http://localhost:8080/auth}
       KEYCLOAK_CLIENT_ID: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_CLIENT_ID:-feasibility-gui}
       KEYCLOAK_ALLOWED_ROLE: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_ALLOWED_ROLE:-CODEX_USER}
       KEYCLOAK_POWER_ROLE: ${CODEX_FEASIBILITY_BACKEND_KEYCLOAK_POWER_ROLE:-CODEX_POWER_USER}
@@ -54,7 +56,10 @@ services:
       PRIVACY_QUOTA_SOFT_CREATE_INTERVALMINUTES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_SOFT_CREATE_INTERVALMINUTES}
       PRIVACY_QUOTA_HARD_CREATE_AMOUNT: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_HARD_CREATE_AMOUNT}
       PRIVACY_QUOTA_HARD_CREATE_INTERVALMINUTES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_HARD_CREATE_INTERVALMINUTES}
-      PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_READ_ANY_POLLINGINTERVALSECONDS}
+      PRIVACY_QUOTA_READ_SUMMARY_POLLINGINTERVALSECONDS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_READ_SUMMARY_POLLINGINTERVALSECONDS}
+      PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_POLLINGINTERVALSECONDS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_POLLINGINTERVALSECONDS}
+      PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_AMOUNT: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_AMOUNT}
+      PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_INTERVALSECONDS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_QUOTA_READ_DETAILED_OBFUSCATED_INTERVALSECONDS}
       # If the total result for a query is below this number, return an empty result instead.
       PRIVACY_THRESHOLD_RESULTS: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_RESULTS}
       PRIVACY_THRESHOLD_SITES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_SITES}
