--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,11 @@
       <version>3.1.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.codehaus.janino</groupId>
+      <artifactId>janino</artifactId>
+      <version>3.1.9</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
