#179 - Make restriction when site counts as answered configurable
- use constants in tests for paths (fix a wrong api version in one test)
- add new variable app.privacy.threshold.sitesResult that defines the threshold a responding site must exceed in order to be configured responding in regard to the threshold for responding sites

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,6 +89,7 @@ app:
     threshold:
       sites: ${PRIVACY_THRESHOLD_SITES:3}
       results: ${PRIVACY_THRESHOLD_RESULTS:20}
+      sitesResult: ${PRIVACY_THRESHOLD_SITES_RESULT:20}
     quota:
       soft:
         create:
