Add Code Coverage Reports to GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,11 @@ jobs:
       - name: Run Tests
         run: mvn -B verify
 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          fail_ci_if_error: true
+
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
 
