--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,8 +22,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: ${KEYCLOAK_BASE_URL_ISSUER:http://localhost:8080/auth}/realms/${KEYCLOAK_REALM:feasibility}
-          jwk-set-uri: ${KEYCLOAK_BASE_URL_JWK:http://localhost:8080/auth}/realms/${KEYCLOAK_REALM:feasibility}/protocol/openid-connect/certs
+          issuer-uri: ${KEYCLOAK_BASE_URL_ISSUER:http://localhost:8080}/realms/${KEYCLOAK_REALM:feasibility}
+          jwk-set-uri: ${KEYCLOAK_BASE_URL_JWK:http://localhost:8080}/realms/${KEYCLOAK_REALM:feasibility}/protocol/openid-connect/certs
 
 springdoc:
   swagger-ui:
@@ -45,9 +45,9 @@ app:
   cqlTranslationEnabled: ${CQL_TRANSLATE_ENABLED:true}
   apiBaseUrl: ${API_BASE_URL:}
   enableQueryValidation: ${QUERY_VALIDATION_ENABLED:true}
-  keycloakAllowedRole: ${KEYCLOAK_ALLOWED_ROLE:FEASIBILITY_USER}
-  keycloakPowerRole: ${KEYCLOAK_POWER_ROLE:FEASIBILITY_POWER_USER}
-  keycloakAdminRole: ${KEYCLOAK_ADMIN_ROLE:FEASIBILITY_ADMIN}
+  keycloakAllowedRole: ${KEYCLOAK_ALLOWED_ROLE:FeasibilityUser}
+  keycloakPowerRole: ${KEYCLOAK_POWER_ROLE:FeasibilityPowerUser}
+  keycloakAdminRole: ${KEYCLOAK_ADMIN_ROLE:FeasibilityAdmin}
   queryResultExpiryMinutes: ${QUERYRESULT_EXPIRY_MINUTES:1}
   broker:
     mock:
@@ -59,8 +59,8 @@ app:
     aktin:
       enabled: ${BROKER_CLIENT_AKTIN_ENABLED:false}
       broker:
-        baseUrl: ${AKTIN_BROKER_BASE_URL}
-        apiKey: ${AKTIN_BROKER_API_KEY}
+        baseUrl: ${AKTIN_BROKER_BASE_URL:}
+        apiKey: ${AKTIN_BROKER_API_KEY:}
     dsf:
       enabled: ${BROKER_CLIENT_DSF_ENABLED:false}
       security:
