#199 - Save and load query results for saved queries
- return amount of free and used slots for saved queries
- fix wrong datatype for "deleted" flag in SavedQuery
- add variable for amount of saved queries per user
- add total number of patients to save query POST
- delete "deleted" flag from saved query
- delete saved query function
- add total result to query list response for by-user endpoint (only available for admin role)
- Update swagger doc
- Add tests for delete saved query
- Add readme entry for MAX_SAVED_QUERIES_PER_USER
- Add more tests for QueryHandlerService

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,7 @@ app:
   keycloakPowerRole: ${KEYCLOAK_POWER_ROLE:FeasibilityPowerUser}
   keycloakAdminRole: ${KEYCLOAK_ADMIN_ROLE:FeasibilityAdmin}
   queryResultExpiryMinutes: ${QUERYRESULT_EXPIRY_MINUTES:1}
+  maxSavedQueriesPerUser: ${MAX_SAVED_QUERIES_PER_USER:10}
   broker:
     mock:
       enabled: ${BROKER_CLIENT_MOCK_ENABLED:false}
