--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,6 +10,7 @@ app:
   keycloakAllowedRole: "FEASIBILITY_TEST_USER"
   keycloakPowerRole: "FEASIBILITY_TEST_POWER"
   keycloakAdminRole: "FEASIBILITY_TEST_ADMIN"
+  maxSavedQueriesPerUser: 2
   broker:
     aktin:
       enabled: false
